Fix overflow tabs

--- a/css/nick-v1.css
+++ b/css/nick-v1.css
@@ -42,6 +42,7 @@ a:hover{
 	margin: 0;
 	padding: 0;
 	height: 2em;
+	overflow-x: auto;
 	list-style: none;
 	background-color: #eeeeee;
 	border-top: 1px solid #e0e0e0;
